# memorious

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NOTICE  README.md  README.rst  REFACTOR.md  docker-compose.dev.yml  env.sh.tmpl  mkdocs.yml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml  python.yml
docs/: cli.md  crawler.md  development.md  incremental.md  index.md  installation.md  operations.md  reference.md  start.md
docs/reference/: cli.md  crawler.md  operations.md  settings.md
example/: setup.py
example/config/: simple_article_scraper.yml
example/scripts/: worker.sh
example/src/example/: __init__.py  article.py  quotes.py
memorious/: __init__.py  cli.py  core.py  env.py  exc.py  settings.py  tasks.py  util.py  worker.py
memorious/helpers/: __init__.py  casting.py  dates.py  forms.py  key.py  pagination.py  regex.py  rule.py  template.py  xpath.py  yaml.py
memorious/logic/: check.py  context.py  crawler.py  fetch.py  http.py  idle_monitor.py  incremental.py  manager.py  mime.py  stage.py
memorious/model/: __init__.py  crawl.py  crawler.py  queue.py  session.py  stage.py
memorious/operations/: __init__.py  aleph.py  clean.py  debug.py  documentcloud.py  extract.py  fetch.py  ftm.py  ftp.py  initializers.py  parse.py  regex.py  store.py  webdav.py
tests/: conftest.py  test_context.py  test_crawler.py  test_documentcloud.py  test_extract.py  test_fetch.py  test_http.py  test_idle_timeout.py  test_manager.py  test_operations.py  test_pipeline.py  test_rule.py
tests/fixtures/: httpbin_auth_crawler.yml  httpbin_crawler.yml
tests/testdata/config/: extended_web_scraper.yml  simple_web_scraper.yml  simple_web_scraper_2.yml
